@@ -9,7 +9,17 @@
 
 <h2>Configuration</h2>
 
-<p>None</p>
+<dl>
+
+<dt><tt>$DEFAULTDOMAIN</tt></dt> <dd>If set, the contents of this
+variable are appended to all sender or recipient addresses that have a
+partial host name (missing at least one "<tt>.</tt>"). (no default)</dd>
+
+<dt><tt>$DEFAULTHOST</tt></dt> <dd>If set, the contents of this variable
+are appended to all sender or recipient addresses that are missing a
+host name. (no default)</dd>
+
+</dl>
 
 <h2>Sender Action</h2>
 
